JDIC library removed - Now using Java6 desktop only Mac OS X dock icon set